--- a/App Playlist Music/styles.css
+++ b/App Playlist Music/styles.css
@@ -58,7 +58,7 @@ ul {
 }
 
 .player {
-  height: 265px;
+  height: 275px;
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -102,7 +102,7 @@ ul {
   display: flex;
   background-color: var(--foreground-color);
   width: 430px;
-  height: 200px;
+  height: 230px;
   column-gap: 13px;
   align-items: center;
   justify-content: center;
@@ -115,7 +115,7 @@ ul {
 
 #player-album-art img {
   width: 150px;
-  height: 173px;
+  height: 188px;
   display: block;
 }
 
@@ -125,7 +125,7 @@ ul {
   row-gap: 20px;
   padding: 14px;
   background-color: var(--background-color);
-  height: 185px;
+  height: 200px;
   width: 240px;
 }
 
@@ -375,4 +375,43 @@ footer {
 .icon{
   width: 100%;
   height: 100%;
+}
+
+#song-progress{
+  width: 100%;
+}
+
+/* Agrega estas reglas al final de tu archivo styles.css */
+
+/* Reducir el tamaño de la playlist */
+.playlist {
+  width: 450px; /* Ajusta el ancho de la playlist según tus preferencias */
+}
+
+#playlist-songs {
+  max-height: 200px; /* Ajusta la altura máxima de la lista de reproducción */
+  overflow-y: auto; /* Agrega una barra de desplazamiento vertical si es necesario */
+}
+
+.playlist-song {
+  height: 40px; /* Ajusta la altura de cada canción en la lista de reproducción */
+}
+
+
+
+.playlist-song-duration {
+  width: 10%; /* Ajusta el ancho de la duración de la canción */
+}
+
+/* Estilos adicionales para mejorar la apariencia en dispositivos más pequeños */
+@media (max-width: 700px) {
+  .playlist {
+    width: 100%;
+  }
+
+  .playlist-song-title,
+  .playlist-song-artist,
+  .playlist-song-duration {
+    width: auto; /* Establece el ancho automático en dispositivos más pequeños */
+  }
 }
