--- a/App Playlist Music/styles.css
+++ b/App Playlist Music/styles.css
@@ -5,7 +5,7 @@
   --app-background-color: #4d4d62;
   --background-color: #1b1b32;
   --foreground-color: #3b3b4f;
-  --highlight-color: #f1be32;
+  --highlight-color: cornflowerblue;
 
   /* font sizes */
   --root-font-size: 16px;
@@ -64,6 +64,8 @@ ul {
   flex-direction: column;
   align-items: center;
   row-gap: 10px;
+  border-radius:20px;
+  border: 1px solid cornflowerblue;
 }
 
 .player-bar,
@@ -75,6 +77,7 @@ ul {
   width: 100%;
   height: 30px;
   background-color: var(--foreground-color);
+  border-radius: 20px;
 }
 
 .parallel-lines {
@@ -89,6 +92,7 @@ ul {
   width: 100%;
   min-width: 75px;
   background-color: var(--highlight-color);
+  border: 1px solid cornflowerblue;
 }
 
 .fcc-title,
@@ -106,17 +110,32 @@ ul {
   column-gap: 13px;
   align-items: center;
   justify-content: center;
+  border: 1px solid cornflowerblue;
+  border-radius: 20px;
 }
 
 #player-album-art {
-  background-color: var(--secondary-color);
-  border: 6px solid var(--background-color);
+  background-color: transparent;
+  border: 6px solid transparent;
+  
 }
 
 #player-album-art img {
   width: 150px;
-  height: 188px;
+  height: 157px;
   display: block;
+  border-radius: 100px;
+}
+
+#player-album-art {
+  background-color: transparent;
+  border: 6px solid transparent;
+  filter: brightness(70%); 
+  transition: filter 0.3s ease;
+}
+
+#player-album-art:hover {
+  filter: brightness(100%);
 }
 
 .player-display {
@@ -127,6 +146,8 @@ ul {
   background-color: var(--background-color);
   height: 222px;
   width: 240px;
+  border: 1px solid cornflowerblue;
+  border-radius: 15px;
 }
 
 .player-display-song-artist {
@@ -144,6 +165,8 @@ ul {
 .player-buttons {
   display: flex;
   justify-content: space-around;
+  margin: 8px;
+  margin-top: -44px;
 }
 
 button {
@@ -178,11 +201,13 @@ button:focus,
   flex-direction: column;
   align-items: center;
   row-gap: 10px;
+  border-radius: 20px;
+  border: 1px solid cornflowerblue;
 }
 
 #playlist-songs {
   width: 430px;
-  height: 100%;
+  height: 142%;
   background-color: var(--foreground-color);
   display: flex;
   flex-direction: column;
@@ -191,6 +216,8 @@ button:focus,
   visibility: visible;
   justify-content: start;
   list-style: none;
+  border-radius: 20px;
+  border: 1px solid cornflowerblue;
 }
 
 .playlist-song {
@@ -332,6 +359,7 @@ button:focus,
       position: relative;
       justify-items: center;
       height: auto;
+      border-radius: 20px;
   }
 
   #player-album-art {
@@ -339,6 +367,7 @@ button:focus,
       height: 280px;
       box-shadow: none;
       background: #000;
+      border-radius: 100%;
   }
 
   #player-album-art img {
@@ -441,4 +470,13 @@ footer {
   #playlist-songs::-webkit-scrollbar-thumb {
     border-radius: 2px; /* Bordes redondeados del mango en dispositivos más pequeños */
   }
+}
+
+.link{
+  color: white;
+  text-decoration: none;
+}
+
+.link:hover{
+  color: #ff0000;
 }
