--- a/App Playlist Music/styles.css
+++ b/App Playlist Music/styles.css
@@ -166,7 +166,7 @@ ul {
   display: flex;
   justify-content: space-around;
   margin: 8px;
-  margin-top: -44px;
+  margin-top: -30px;
 }
 
 button {
@@ -479,4 +479,49 @@ footer {
 
 .link:hover{
   color: #ff0000;
+}
+
+.time-volume-controls {
+  display: flex;
+  align-items: center;
+}
+
+.time-bar {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.time-input {
+  width: 100%;
+  height: 10px; /* Ajusta la altura según tu preferencia */
+  appearance: none;
+  border-radius: 5px;
+  outline: none;
+  transition: background 0.3s;
+  background-color: transparent;
+}
+
+.volume-input {
+  width: 15%; /* Ajusta el ancho según tu preferencia */
+  height: 15px; /* Ajusta la altura según tu preferencia */
+  appearance: none;
+  border-radius: 5px;
+  outline: none;
+  transition: background 0.3s;
+}
+
+.time-input::-webkit-slider-thumb,
+.volume-input::-webkit-slider-thumb,
+.time-input::-moz-range-thumb,
+.volume-input::-moz-range-thumb {
+  appearance: none;
+  width: 20px; /* Ajusta el tamaño del pulgar según tu preferencia */
+  height: 20px; /* Ajusta el tamaño del pulgar según tu preferencia */
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+label {
+  font-size: 24px; /* Ajusta el tamaño de la etiqueta según tu preferencia */
+  margin-right: 10px;
 }
