--- a/App Playlist Music/styles.css
+++ b/App Playlist Music/styles.css
@@ -540,6 +540,9 @@ label {
 button#search-btn{
   margin-left: -150px
 }
+button#search-btn:hover{
+  color: cornflowerblue;
+}
 
 .delete-button-container {
   position: absolute;
